# email-audit-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-manage.sh  manage.py  pyproject.toml
audit/: tasks.py  urls.py  views.py
email_audit/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ingestion/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
ingestion/migrations/: 0001_initial.py
reports/: admin.py  models.py
reports/migrations/: 0001_initial.py
rules/: admin.py  models.py
rules/migrations/: 0001_initial.py  0002_add_dummy_email_rules.py
test/: sample_mail_1.eml
users/: models.py
users/migrations/: 0001_initial.py
